# dvd-ripper

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  classify.py  config.py  db.py  main.py  plex_naming.py  state.py
app/metadata/: tmdb.py  tvdb.py
app/web/: approve.py  routes.py
app/web/templates/: index.html  job_card.html
app/workers/: disc_watch.py  encode.py  publish.py  rip.py
deploy/: 99-dvd-insert.rules  README.md  dvd-insert@.service  dvd-pipeline.service  install.sh
scripts/: setup-linux.sh  setup-windows.ps1
tests/: test_auto_classify_route.py  test_cancel.py  test_classify.py  test_classify_disc.py  test_disc_watch.py  test_retry_encode.py  test_rip.py
tests/fixtures/mock_makemkvcon/: mock_makemkvcon.cmd  mock_makemkvcon.py  mock_makemkvcon.sh
tests/fixtures/mock_makemkvcon/samples/: sample_00.mkv  sample_01.mkv  sample_02.mkv  sample_03.mkv  sample_04.mkv  sample_05.mkv
